DTOs were converted to records, tests were added, and the authorization part still needs further improvement.